Fix tests
Signed-off-by: Daniel Widdis <widdis@gmail.com>